--- a/src/DisplayComponents/TitleNav.css
+++ b/src/DisplayComponents/TitleNav.css
@@ -1,3 +1,20 @@
 .TitleNav{
     border: 1px solid lime;
 }
+
+.wrapper {
+    display: grid;
+    grid-template-columns: 25vw 50vw 25vw;
+}
+
+.Title{
+    font-weight: bold;
+    font-size: 10px;
+    padding: 10px;
+}
+
+.MenuBtn{
+    padding-right: 20px;
+    text-align: right;
+    font-size: 26px;
+}
