--- a/src/GameComponents/Cell.css
+++ b/src/GameComponents/Cell.css
@@ -106,6 +106,7 @@
     transform: scale(0.8, 0.8);
     border-radius: 8px;
     background-color: rgba(0, 172, 29, 0.719);
+    cursor: pointer;
 }
 
 .CellState2-collectText2{
