--- a/src/GameComponents/DataDisplay.css
+++ b/src/GameComponents/DataDisplay.css
@@ -6,7 +6,7 @@
 .DataDisplay-1Data-ul, .DataDisplay-2Buttons-ul li{
   list-style: none;
   display: inline-block;
-  margin: 8px;
+  margin: 4px;
 }
 
 .DataDisplay-btn{
@@ -14,7 +14,10 @@
   padding: 4px 8px 4px 8px;
   outline: none;
   color: rgb(129, 129, 129);
-  border: 1px solid rgba(0, 0, 0, 0.432);
+  border: none;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.11);
+  border-right: 1px solid rgba(0, 0, 0, 0.11);
+  border-radius: 6px;
   cursor: pointer;
 }
 
