--- a/src/ScreenComponents/Main.css
+++ b/src/ScreenComponents/Main.css
@@ -13,3 +13,15 @@
 .AddMenuComponent{
     display: block;
 }
+
+@keyframes LoadMainScreen{
+    0%{
+        opacity: 0;
+        transform:translate(0,-20px); 
+        
+    }
+    100%{
+        opacity: 100;
+        transform:translate(0,-0);
+    }
+}
