--- a/src/GameComponents/AddMenu.css
+++ b/src/GameComponents/AddMenu.css
@@ -31,10 +31,61 @@
 }
 
 .exit{
+    cursor: pointer;
+}
 
+.exit:hover{
+    transform: scale(0.7, 0.7) rotate(180deg);
+    Animation: ExitBtn 0.5s;
+}
+
+@keyframes ExitBtn{
+    0%{
+        transform: scale(1, 1) rotate(0deg);
+    }
+    100%{
+        transform: scale(0.7, 0.7) rotate(180deg);
+    }
 }
 
 .mid{
+    padding: 20px 0 20px 0;
+}
+
+.mid-table{
+    display: grid;
+    grid-template-columns: 70% 30%;
+}
+
+.NetInvest{
+    border-top: 1px solid rgba(0, 0, 0, 0.12);
+}
+
+.mid-AddBtn{
+    padding: 10px 0 0 0 ;
+}
+
+.AddCellsBtn{
+    cursor: pointer;
+    width: 69%;
+    height: 24px;
+    background: none;
+    background-color: rgb(0, 211, 53);
+    border: none;
+    border-radius: 12px;
+    color: white;
+    font-size: 10px;
+    font-weight: bold;
+}
+
+.AddCellsBtn:hover{
+    background-color: rgb(0, 189, 47);
+    border: none;
+    border-radius: 12px;
+    color: rgba(255, 255, 255, 0.85);
+}
+
+.bot{
     margin: 8px;
 }
 
@@ -46,12 +97,4 @@
     display: grid;
     grid-template-columns: 90% 10%;
     grid-gap: 4px;
-}
-
-.skill{
-    
-}
-
-.dropdownArrow{
-    
 }
