--- a/src/GameComponents/Tab.css
+++ b/src/GameComponents/Tab.css
@@ -5,10 +5,10 @@
 
 .assetListHeader{
     display: grid;
-    grid-template-columns: 25% 45% 10% 20%;
+    grid-template-columns: 20% 20% 20% 20% 20%;
 }
 
 .asset-row-header{
     font-weight: bold;
-    transform: scale(0.4, 0.4);
+    transform: scale(0.5, 0.5);
 }
