--- a/src/ScreenComponents/Main.css
+++ b/src/ScreenComponents/Main.css
@@ -6,11 +6,19 @@
     display: none;
 }
 
+.HideEnrichMenuComponent{
+    display: none;
+}
+
 .MainComponents{
     display: block;
 }
 
 .AddMenuComponent{
+    display: block;
+}
+
+.EnrichMenuComponent{
     display: block;
 }
 
